tests/negative/gold/interface3_test.gold
tests/negative/interface3_test.toit:6:3: error: Interface members can't have bodies
  foo:
  ^~~
tests/negative/interface3_test.toit:10:8: error: Can't instantiate interface 'A'
  a := A
       ^
Compilation failed.
